--- a/SlidingMenuExample/app/src/main/res/values/strings.xml
+++ b/SlidingMenuExample/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_login_activity_homemade">LoginActivityHomemade</string>
 </resources>
