--- a/SlidingMenuExample/app/src/main/res/values/strings.xml
+++ b/SlidingMenuExample/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
         completions."
     </string>
     <string name="title_activity_login_activity_homemade">LoginActivityHomemade</string>
+    <string name="step_counter">
+         android.hardware.sensor.stepcounter
+    </string>
+    <string name="step_detector">
+         android.hardware.sensor.stepdetector
+    </string>
 </resources>
