--- a/SlidingMenuExample/app/src/main/res/values/strings.xml
+++ b/SlidingMenuExample/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="step_detector">
          android.hardware.sensor.stepdetector
     </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
