--- a/SlidingMenuExample/app/src/main/res/values/strings.xml
+++ b/SlidingMenuExample/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@ LifeByME will not sell any personal information to third parties. </string>
     <string name = "skip_day">Skip day</string>
     <string name = "yes">Yes</string>
     <string name = "no">No</string>
+    <string name = "share">(click to share)</string>
+    <string name = "unshare">(click to unshare)</string>
     <string name = "daily_activity">Daily Activity</string>
     <string name = "submit">Submit</string>
     <string name = "add_variable">Add new</string>
