--- a/SlidingMenuExample/app/src/main/res/values/strings.xml
+++ b/SlidingMenuExample/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SlidingMenuExample</string>
+    <string name="app_name">LifeByME</string>
     <string name="drawer_opened">Opened</string>
     <string name="drawer_closed">Closed</string>
     <string name="title_activity_login">Sign in</string>
